--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -148,6 +148,7 @@
                 <li><a href="https://www.linkedin.com/company/omniscient-design/" target="_blank"><%=t('footer.linkedin')%></a></li>
                 <li><a href="https://www.instagram.com/omniscientdesign_/" target="_blank"><%=t('footer.instragram')%></a></li>
                 <li><a href="https://www.tiktok.com/@omniscientdesign_?_t=ZN-90GUtYty67y&_r=1" target="_blank"><%=t('footer.tiktok')%></a></li>
+                <li><a href="https://fr.pinterest.com/omniscientdesign/" target="_blank">Pinterest</a></li>
               </ul>
             </div>
             <!-- Contact -->
