--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -29,6 +29,9 @@
         <path d="M2 8L2 20" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
         <path d="M2 2V2.0001" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
       </svg>
+      <div class="notification-counter">
+        <div class="notification-badge">!</div>
+      </div>
     </div>
     <%= link_to notifications_path do %>
       <div class="circle circle-notif">
@@ -383,6 +386,31 @@
                     </div>
                     <div class="popup-inner">
                       <p class="title-popup"><%= t('mainpopup.title') %></p>
+                      <div class="popup-decoration">
+                        <%= image_tag("merci-100.png", :alt => "100 utilisateurs") %>
+                      </div>
+                      <p class="subtitle-popup">Un grand merci</p>
+                      <p>
+                        La communauté Omniscient Design s'agrandit ! Nous sommes incroyablement fiers et reconnaissants de compter aujourd'hui <strong>plus de 100 utilisateurs inscrits</strong>. Merci à chacun de vous !
+                        <br>
+                        <br>
+                        Nous souhaitons adresser un immense merci tout particulier à <strong>Lou, notre toute première donatrice</strong> ! 💖
+                        <br>
+                        <br>
+                        Un geste formidable qui nous aide concrètement à maintenir la plateforme active et à financer son développement futur. 
+                        <br>
+                        <br>
+                        Mais sa contribution ne s'arrête pas là : Lou a aussi enrichi la base de données en ajoutant la fiche du designer 
+                        <%= link_to "Jean Widmer", "https://omniscientdesign.fr/fr/designers/jean-widmer", style: "text-decoration: underline; font-weight: 500; color: #202020;" %>.
+                        <br>
+                        <br>
+                        C'est exactement l'esprit que nous souhaitons pour Omniscient Design : une plateforme collaborative qui vit et s'enrichit grâce à sa communauté.
+                        <br>
+                        <br>
+                        Si vous aussi, vous appréciez le projet, vous pouvez faire comme Lou !
+                      </p>
+                      <%= link_to "Faire un don", "https://fr.tipeee.com/le-site-omniscient-design", class: "button dark"%>
+                      <%= link_to "Ajouter une référence", add_elements_path, class: "button dark" %>
                       <div class="popup-decoration">
                         <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
                       </div>
