--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,32 +1,12 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
-
- */
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-/*
- *= require cookies_eu
- *= require pagination
-*/
+@import "select2.min";
+@import "cookies_eu";
+@import "pagination";
 
 @import "abstracts/variables";
 
 @import "base/reset";
 @import "base/font";
+@import "base/global";
 
 @import "components/alert";
 @import "components/button";
@@ -55,191 +35,3 @@
 @import "pages/profil";
 @import "pages/reference";
 @import "pages/searchpage";
-
-html {
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "IBM Plex Sans";
-  overflow-x: hidden;
-}
-[data-loading-target="footer"] {
-  display: none;
-}
-main {
-  margin-left: 350px;
-  width: calc(100vw - 350px);
-}
-
-.main-show {
-  margin-left: 0;
-  width: auto;
-}
-
-.no-scroll {
-  overflow: hidden;
-}
-
-.form-step h3 {
-  color: #fff;
-  margin-top: 0;
-  padding: 48px 0;
-}
-.form-step textarea {
-  width: auto;
-}
-
-.grid-1 {
-  padding: 0 10vw 64px 10vw;
-}
-
-/* Home Page */
-
-.subtitle-top {
-  font-size: 20px;
-  font-weight: 500;
-  margin-top: 24px;
-  color: #fff;
-}
-
-.subtitle {
-  width: 50vw;
-  color: #e9e9e9;
-  line-height: 125%;
-}
-.subtitle a {
-  color: #e9e9e9;
-}
-/* Add elements */
-
-.flex-form {
-  display: flex;
-  flex-direction: column;
-  gap: 36px;
-}
-
-.flex-form div {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-@media screen and (max-width: 1280px) {
-  main {
-    margin-left: 30vw;
-    width: 70vw;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  main {
-    margin-left: 30vw;
-    width: 70vw;
-  }
-
-  .subtitle {
-    width: fit-content;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  main {
-    margin-left: 0;
-    width: auto;
-  }
-
-  .subtitle {
-    width: fit-content;
-  }
-
-  main {
-    padding-bottom: 80px;
-  }
-}
-
-.top-header {
-  padding: 0 10vw;
-  padding-top: 96px;
-  padding-bottom: 72px;
-  background-color: #202020;
-  color: #fff;
-  position: relative;
-
-  h1 {
-    color: $secondary-color;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .top-header {
-    padding: 0 5vw;
-    padding-top: 64px;
-    padding-bottom: 56px;
-  }
-}
-
-@media screen and (min-width: 601px) and (max-width: 800px) {
-  .top-header {
-    padding: 0 8vw;
-    padding-top: 72px;
-    padding-bottom: 64px;
-  }
-}
-
-body {
-  background-color: $background-color;
-}
-
-body.light-mode {
-  background-color: $background-color;
-}
-
-body.dark-mode {
-  background-color: $background-color-dark;
-}
-
-// Cookies
-#cookie-consent-banner {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: #f7f7f7;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  z-index: 1000;
-}
-
-#cookie-consent-banner button {
-  background-color: $primary-color;
-  color: $secondary-color;
-  padding: 5px 10px;
-  border: none;
-  margin: 5px;
-}
-
-@media screen and (max-width: 425px) {
-  .grid-1 {
-    padding: 0 5vw 32px 5vw;
-  }
-}
-
-@media screen and (min-width: 426px) and (max-width: 1024px) {
-  .grid-1 {
-    padding: 0 8vw 52px 8vw;
-  }
-}
-
-@media screen and (min-width: 1700px) {
-  .grid-1 {
-    padding: 0 15vw 64px 15vw;
-  }
-
-  .top-header {
-    padding: 0 15vw;
-    padding-top: 96px;
-    padding-bottom: 72px;
-  }
-}
